# korean-pii

./: .dockerignore  .gitignore  README.md  pyproject.toml
app/: combination.yml  main.py  pii_general.py  pii_main.py  pii_ocr.py
app/recognizer/: __init__.py  arn_recognizer.py  ban_recognizer.py  brn_recognizer.py  dln_recognizer.py  per_recognizer.py  phone_recognizer.py  pn_recognizer.py  rrn_recognizer.py
environments/deploy/: Dockerfile  docker-compose.yml
models/koelectra-onnx/: config.json  tokenizer_config.json
models/paddleocr/rec/korean_PP-OCRv5_mobile_rec/: config.json
